--- a/services/user_service/deployments/docker/docker-compose.yml
+++ b/services/user_service/deployments/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   postgres:
     image: postgres:latest
+    container_name: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 12345678
@@ -10,6 +11,7 @@ services:
   
   redis:
     image: redis:latest
+    container_name: redis
     networks:
       - user_network
   
@@ -17,6 +19,9 @@ services:
     build:
       context: ../..
       dockerfile: deployments/docker/Dockerfile
+    container_name: user_service
+    ports:
+      - "8001:8001"
     # logging:
     #     driver: journald
     #     options:
