--- a/services/user_service/config/user.deployment.env
+++ b/services/user_service/config/user.deployment.env
@@ -11,4 +11,5 @@ REDIS_PORT=6379
 
 # Port configuration
 USER_SERVER_HOST=localhost
-USER_SERVER_PORT=8001
+GRPC_USER_SERVER_PORT=50051
+REST_USER_SERVER_PORT=80
